prevent user from zooming or panning too far from location, and attempt to prevent pinch zooming the map on mobile to also zoom the webpage itself

--- a/css/styles.less
+++ b/css/styles.less
@@ -513,10 +513,14 @@ div.footer-popup {
 
 // TYPICON SIZE OVERRIDE
 .typcn {
-    font-size: 200%;
+    font-size: 190%;
 }
 
 @media only screen and (max-width: 768px) {
+    body {
+        // test
+        overflow: hidden;
+    }
     #map {
         margin-top: 56px;
         bottom: 0px;
